--- a/Homework-1/index.html
+++ b/Homework-1/index.html
@@ -10,6 +10,7 @@
   <header class="header">
     <div class="container">
       <div class="header-wrapper">
+        <div class="header-basket"></div>
         <div class="header-logo">
           <img src="http://placehold.it/50x50" alt="Логотип">
         </div>
@@ -23,15 +24,11 @@
           </ul>
         </div>
 
-        <div class="header-clock">
-          
-        </div>
+        <div class="header-clock"></div>
 
-        <div class="header-basket">
-          <button class="basket-btn">
-            Корзина
-          </button>
-        </div>
+        <button class="basket-btn">
+          Корзина
+        </button>
       </div>
     </div>
   </header>
@@ -40,7 +37,7 @@
     <section class="product">
       <div class="container">
         <div class="product-wrapper">
-          <div class="product-block">
+          <!-- <div class="product-block">
             <div class="product-block-img">
               <img src="http://placehold.it/350x300" alt="Наименование товара">
             </div>
@@ -53,11 +50,11 @@
               </p>
               <div class="product-block-quantity">
                 <p class="product__price">
-                  150 <span>&#8381;</span>
+                  45 000 <span>&#8381;</span>
                 </p>
                 <div class="product-quant">
                   <button class="item-minus">-</button>
-                  <span>0</span>
+                  <span>1</span>
                   <button class="item-plus">+</button>
                 </div>
                 <div class="product-add-basket">
@@ -79,11 +76,11 @@
               </p>
               <div class="product-block-quantity">
                 <p class="product__price">
-                  150 <span>&#8381;</span>
+                  250 000 <span>&#8381;</span>
                 </p>
                 <div class="product-quant">
                   <button class="item-minus">-</button>
-                  <span>0</span>
+                  <span>1</span>
                   <button class="item-plus">+</button>
                 </div>
                 <div class="product-add-basket">
@@ -105,11 +102,11 @@
               </p>
               <div class="product-block-quantity">
                 <p class="product__price">
-                  150 <span>&#8381;</span>
+                  65 000 <span>&#8381;</span>
                 </p>
                 <div class="product-quant">
                   <button class="item-minus">-</button>
-                  <span>0</span>
+                  <span>1</span>
                   <button class="item-plus">+</button>
                 </div>
                 <div class="product-add-basket">
@@ -131,11 +128,11 @@
               </p>
               <div class="product-block-quantity">
                 <p class="product__price">
-                  150 <span>&#8381;</span>
+                  25 000 <span>&#8381;</span>
                 </p>
                 <div class="product-quant">
                   <button class="item-minus">-</button>
-                  <span>0</span>
+                  <span>1</span>
                   <button class="item-plus">+</button>
                 </div>
                 <div class="product-add-basket">
@@ -143,7 +140,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
@@ -164,6 +161,7 @@
     </div>
   </footer>
   
-  <script src="script.js"></script>
+  <!-- <script src="script.js"></script> -->
+  <script src="app.js"></script>
 </body>
 </html>
