--- a/Homework-1/index.html
+++ b/Homework-1/index.html
@@ -10,7 +10,10 @@
   <header class="header">
     <div class="container">
       <div class="header-wrapper">
-        <div class="header-basket"></div>
+        <div class="header-basket">
+          <div class="header-basket-product"></div>
+          <div class="basket-total">Итого: <span></span></div>
+        </div>
         <div class="header-logo">
           <img src="http://placehold.it/50x50" alt="Логотип">
         </div>
@@ -36,112 +39,133 @@
   <main class="main">
     <section class="product">
       <div class="container">
-        <div class="product-wrapper">
-          <!-- <div class="product-block">
-            <div class="product-block-img">
-              <img src="http://placehold.it/350x300" alt="Наименование товара">
+        <div class="product-wrapper"></div>
+      </div>
+    </section>
+
+    <section class="gamburger">
+      <div class="container">
+        <div class="gamburger-filling-wrapper">
+          <div class="gamburgers">
+            <h2>Собери свой гамбургер</h2>
+          <div class="gamburger-wrapper">
+            <div class="gamburger-block gamb-block">
+              <div class="gamburger-image">
+                <img src="http://placehold.it/200x200" alt="">
+              </div>
+              <h3 class="gamburger-title">
+                Маленький
+              </h3>
+              <p class="gamburger-price"><span>50</span> рублей</p>
+              <p class="gamburger-calory"><span>20</span> калорий</p>
+              <button data-name="gamburger-block" class="gamburger-btn">
+                Выбрать
+              </button>
             </div>
-            <div class="product-block-content">
-              <h2 class="product-block-title">
-                Телевизор Samsung
-              </h2>
-              <p class="product-block-desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, fugiat.
-              </p>
-              <div class="product-block-quantity">
-                <p class="product__price">
-                  45 000 <span>&#8381;</span>
-                </p>
-                <div class="product-quant">
-                  <button class="item-minus">-</button>
-                  <span>1</span>
-                  <button class="item-plus">+</button>
+            <div class="gamburger-block gamb-block">
+              <div class="gamburger-image">
+                <img src="http://placehold.it/200x200" alt="">
+              </div>
+              <h3 class="gamburger-title">
+                Большой
+              </h3>
+              <p class="gamburger-price"><span>100</span> рублей</p>
+              <p class="gamburger-calory"><span>40</span> калорий</p>
+              <button data-name="gamburger-block" class="gamburger-btn">
+                Выбрать
+              </button>
+            </div>
+          </div>
+          </div>
+          <div class="fillings">
+            <h2>Начинка для гамбургера</h2>
+          <div class="filling-wrapper">
+            <div class="filling-block gamb-block">
+              <div class="filling-image">
+                <img src="http://placehold.it/200x100" alt="">
+              </div>
+              <h3 class="filling-title">
+                С сыром
+              </h3>
+              <p class="gamburger-price filling-price"><span>10</span> рублей</p>
+              <p class="gamburger-calory filling-calory"><span>20</span> калорий</p>
+              <button data-name="filling-block" class="filling-btn">
+                Выбрать
+              </button>
+            </div>
+  
+            <div class="filling-block gamb-block">
+              <div class="filling-image">
+                <img src="http://placehold.it/200x100" alt="">
+              </div>
+              <h3 class="filling-title">
+                С салатом
+              </h3>
+              <p class="gamburger-price filling-price"><span>20</span> рублей</p>
+              <p class="gamburger-calory illing-calory"><span>5</span> калорий</p>
+              <button data-name="filling-block" class="filling-btn">
+                Выбрать
+              </button>
+            </div>
+  
+            <div class="filling-block gamb-block">
+              <div class="filling-image">
+                <img src="http://placehold.it/200x100" alt="">
+              </div>
+              <h3 class="filling-title">
+                С картофелем
+              </h3>
+              <p class="gamburger-price filling-price"><span>15</span> рублей</p>
+              <p class="gamburger-calory filling-calory"><span>10</span> калорий</p>
+              <button data-name="filling-block" class="filling-btn">
+                Выбрать
+              </button>
+            </div>
+          </div>
+
+          <div class="additional-filling">
+            <h2 class="additional-filling-title">
+              Дополнительные приправы
+            </h2>
+            <div class="additional-wrapper">
+              <div class="additional-block gamb-block">
+                <div class="additional-image">
+                  <img src="http://placehold.it/100x150" alt="">
                 </div>
-                <div class="product-add-basket">
-                  <img src="images/shopping-basket.svg" alt="В корзину">
+                <div class="additional-content">
+                  <h4 class="additional-title">
+                    Приправа
+                  </h4>
+                  <p class="gamburger-price additional-price"><span>15</span> рублей</p>
+                  <p class="gamburger-calory additional-calory"><span>0</span> калорий</p>
+                  <button data-name="additional-block" class="additional-btn">
+                    Выбрать
+                  </button>
+                </div>
+              </div>
+  
+              <div class="additional-block gamb-block">
+                <div class="additional-image">
+                  <img src="http://placehold.it/100x150" alt="">
+                </div>
+                <div class="additional-content">
+                  <h4 class="additional-title">
+                    Майонез
+                  </h4>
+                  <p class="gamburger-price additional-price"><span>20</span> рублей</p>
+                  <p class="gamburger-calory additional-calory"><span>5</span> калорий</p>
+                  <button data-name="additional-block" class="additional-btn">
+                    Выбрать
+                  </button>
                 </div>
               </div>
             </div>
           </div>
-          <div class="product-block">
-            <div class="product-block-img">
-              <img src="http://placehold.it/350x300" alt="Наименование товара">
-            </div>
-            <div class="product-block-content">
-              <h2 class="product-block-title">
-                MacBook Pro
-              </h2>
-              <p class="product-block-desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, perferendis!
-              </p>
-              <div class="product-block-quantity">
-                <p class="product__price">
-                  250 000 <span>&#8381;</span>
-                </p>
-                <div class="product-quant">
-                  <button class="item-minus">-</button>
-                  <span>1</span>
-                  <button class="item-plus">+</button>
-                </div>
-                <div class="product-add-basket">
-                  <img src="images/shopping-basket.svg" alt="В корзину">
-                </div>
-              </div>
-            </div>
           </div>
-          <div class="product-block">
-            <div class="product-block-img">
-              <img src="http://placehold.it/350x300" alt="Наименование товара">
-            </div>
-            <div class="product-block-content">
-              <h2 class="product-block-title">
-                Iphone 12
-              </h2>
-              <p class="product-block-desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, perferendis!
-              </p>
-              <div class="product-block-quantity">
-                <p class="product__price">
-                  65 000 <span>&#8381;</span>
-                </p>
-                <div class="product-quant">
-                  <button class="item-minus">-</button>
-                  <span>1</span>
-                  <button class="item-plus">+</button>
-                </div>
-                <div class="product-add-basket">
-                  <img src="images/shopping-basket.svg" alt="В корзину">
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="product-block">
-            <div class="product-block-img">
-              <img src="http://placehold.it/350x300" alt="Наименование товара">
-            </div>
-            <div class="product-block-content">
-              <h2 class="product-block-title">
-                Sony Playstation
-              </h2>
-              <p class="product-block-desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, perferendis!
-              </p>
-              <div class="product-block-quantity">
-                <p class="product__price">
-                  25 000 <span>&#8381;</span>
-                </p>
-                <div class="product-quant">
-                  <button class="item-minus">-</button>
-                  <span>1</span>
-                  <button class="item-plus">+</button>
-                </div>
-                <div class="product-add-basket">
-                  <img src="images/shopping-basket.svg" alt="В корзину">
-                </div>
-              </div>
-            </div>
-          </div> -->
         </div>
+
+        <h2 class="total-gamburger">Итоговая сумма: <span></span></h2>
+        <h2 class="total-calory">Количество калорий: <span></span></h2>
       </div>
     </section>
   </main>
