--- a/Homework-1/index.html
+++ b/Homework-1/index.html
@@ -169,6 +169,7 @@
       </div>
     </section>
   </main>
+  <button class="get-xhr">получить запрос</button>
 
   <footer class="footer">
     <div class="container">
@@ -185,7 +186,7 @@
     </div>
   </footer>
   
-  <!-- <script src="script.js"></script> -->
   <script src="app.js"></script>
+  <script src="lesson-3.js"></script>
 </body>
 </html>
