Добавил метод поиска товаров

--- a/Homework-1/index.html
+++ b/Homework-1/index.html
@@ -27,7 +27,11 @@
           </ul>
         </div>
 
-        <div class="header-clock"></div>
+        <div class="header-search">
+          <form>
+            <input class="input-search" type="text" value="" placeholder="Поиск">
+      </form>
+        </div>
 
         <button class="basket-btn">
           Корзина
@@ -168,8 +172,23 @@
         <h2 class="total-calory">Количество калорий: <span></span></h2>
       </div>
     </section>
+
+    <section class="text">
+      <div class="container text-container">
+        <h2 style="margin-top: 200px;">
+          Регулярные выражения
+        </h2>
+        <p>
+          'Lorem ipsum, dolor si't amet consectetu'r adipisicin'g elit'. 
+          'Sapiente doloremque, mollitia vitae, laudantium eius consectetur fugiat dolores vel, 
+          ipsam quas saepe alia's atque nobis eaque tenetur aperiam labore numquam distincti'o providen't quod'. 
+          'Officiis iure unde sequi a perferendis doloremque saepe rerum quaerat, 
+          sed delectu's sint mollitia porro totam beatae reprehenderit'.
+        </p>
+        <hr>
+      </div>
+    </section>
   </main>
-  <button class="get-xhr">получить запрос</button>
 
   <footer class="footer">
     <div class="container">
@@ -188,5 +207,6 @@
   
   <script src="app.js"></script>
   <script src="lesson-3.js"></script>
+  <script src="lesson-4.js"></script>
 </body>
 </html>
