add search and jsons

--- a/Homework-1/index.html
+++ b/Homework-1/index.html
@@ -11,7 +11,7 @@
       <comp-header ref="header" ></comp-header>
 
       <main class="main">
-        <comp-products :items = "filteredGoods" @addtocart="test($event)"></comp-products> 
+        <comp-products  ref="goods"></comp-products> 
       </main>
 
       <comp-footer></comp-footer>
